refactor: harden crawl outcomes and tool response contract